--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
 	
-	<script type="text/javascript" src= "assets/javascript/game.js"></script>
+
 </head>
 <body>
 
@@ -60,17 +63,17 @@
 
 							<div class="form-group">
 								<label for="destination">Destination</label>
-							    <input type="text" class="form-control" id="destination">
+							    <input type="text" class="form-control" id="destinationInput">
 							</div>
 
 							<div class="form-group">
 							    <label for="firstT">First Train Time(HH:mm - military time)</label>
-							    <input type="text" class="form-control" id="firstT">
+							    <input type="text" class="form-control" id="firstTInput">
 							</div>
 
 							<div class="form-group">
 							    <label for="frequency">Frequency(min)</label>
-							    <input type="text" class="form-control" id="frequency">
+							    <input type="text" class="form-control" id="frequencyInput">
 							</div>
 
 							<button type="submit" class="btn btn-primary" id="searchBtn">Search</button>
@@ -81,9 +84,11 @@
 		</div>
 	</div>
 
-	
-
 </div>
+
+
+<script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
+<script type="text/javascript" src= "assets/javascript/game.js"></script>
 
 </body>
 </html>
