--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<!-- Jumbotron  -->
 	<div class="jumbotron">
 		<h1>Train Station Schedule</h1>
+		<h3>Be on time or wait for the next train!</h3>
 	</div>
 
 	<div class="row">
@@ -76,7 +77,7 @@
 							    <input type="text" class="form-control" id="frequencyInput">
 							</div>
 
-							<button type="submit" class="btn btn-primary" id="searchBtn">Search</button>
+							<button type="submit" class="btn btn-primary" id="submit">Submit</button>
 	  						
 						</form>
 					</div>
