--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<!-- Jumbotron  -->
 	<div class="jumbotron">
 		<h1>Train Station Schedule</h1>
-		<h3>Be on time or wait for the next train!</h3>
+		<h3>Be on time or wait for the next train!fir</h3>
 	</div>
 
 	<div class="row">
-			<!-- Results Panel -->
+		
 		<div class="col-lg-12">
 			<div class="panel panel-default">
 				<div class="panel-heading">
@@ -74,7 +74,7 @@
 
 							<div class="form-group">
 							    <label for="frequency">Frequency(min)</label>
-							    <input type="text" class="form-control" id="frequencyInput">
+							    <input type="number" class="form-control" id="frequencyInput">
 							</div>
 
 							<button type="submit" class="btn btn-primary" id="submit">Submit</button>
